# sjdb

./: .clang-format  CMakeLists.txt  CMakeLists.txt.user.1cf38ee  README.md  main.cpp  main_BASE_11085.cpp  main_REMOTE_11085.cpp  sample.txt  todo.txt
.cache/clangd/index/: database.cpp.B9E167868E1925E5.idx  database.h.8FEFC00249EC29B2.idx  enums.h.0D8B065517EDA367.idx  filemanager.cpp.1FB3AA3F23A8691A.idx  filemanager.h.5A52E540CBF7C4F8.idx  main.cpp.0C1FF40328FD5CEA.idx  notcopyable.h.FCDF5DEE9162C057.idx  shell.cpp.C594BC0CC3698E99.idx  shell.h.2048E947264E8D98.idx
Src/: CMakeLists.txt  database.h  enums.h  filemanager.cpp  filemanager.h  shell.cpp  shell.h  structs.h
Test/: CMakeLists.txt  tst_interpreter.cpp  tst_nvpolystream.cpp
Utils/: CMakeLists.txt  fileFormat.h  notcopyable.h  nvpolystream.h  tagstring.h
